apps/safeqbit-local-hq/authentik01/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik01
  labels:
    app.kubernetes.io/name: authentik01
    app.kubernetes.io/managed-by: flux
    cluster: safeqbit-local-hq
    backup.policy/velero: biweekly
